replace hover none to make sure it works on iphone 6

--- a/styles/landing_page.css
+++ b/styles/landing_page.css
@@ -481,7 +481,7 @@ h1 {
 
 
 
-@media screen and (max-width: 1060px), (min-resolution: 2dppx) {
+@media screen and (max-width: 1060px) {
   .app {
     background-position: 60% 0%;
   }
@@ -517,7 +517,7 @@ h1 {
   }
 }
 
-@media screen and (max-width: 768px), (min-resolution: 2dppx), (-webkit-min-resolution: 2dppx) {
+@media screen and (max-width: 768px), (min-resolution: 2dppx), (hover: none) {
   .app {
     background-image: url("../images/hero-image-mobile.jpg");
   }
